# Comparative-Study-of-ARIMA-LSTM-and-Prophet-for-Demand-Forecasting

./: .dvc_config_template  .env.example  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  dvc.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
